2010-05-03  James Youngman  <jay@gnu.org>

	Don't declare rename, remove.  Include <cstdio> where we use it.
	* file.h: Avoid declaring rename and remove.
	* version.h: Include <cstdio>
	* prompt.cc: Likewise.
	* environment.cc: Likewise.
	* linebuf.cc: Likewise.
	* quit.cc: Likewise.
	* fileiter.cc: Likewise.
	* run.cc: Likewise.
	* showconfig.cc: Include <cstdio>.  Update copyright year.

	Avoid #if defined(FOO), use #if defined FOO instead.
	* .x-sc_useless_cpp_parens: Exempt files in the Google C++ Testing
	Framework.
	Also exempt ekko.c, since it's better to preserve the similarity
	with the code it was originally taken from.
	* defaults.h: Avoid #if defined(FOO), use #if defined FOO
	instead.
	* cssc.h: Likewise.
	* file.cc: Likewise.
	* filelock.h: Likewise.
	* quit.cc: Likewise.
	* quit.h: Likewise.
	* run.cc: Likewise.
	* run.h: Likewise.
	* sccsfile.cc: Likewise.
	* sf-write.cc: Likewise.
	* sysdep.h: Likewise.

	Exempt programs that don't use error() from using error().
	* .x-sc_unmarked_diagnostics: Exempt sccs.cgi and what.cc.

	Skip sc_two_space_separator_in_usage for things that aren't code.
	* .x-sc_two_space_separator_in_usage: Don't check docs/Platforms,
	it's not a program.

	Skip trailing-blank check, there are too many violations for now.
	* .x-sc_trailing_blank: Skip this test.

	Correct "the the" to "the".
	* get.cc (main): correct "the the" to "the".
	* sf-prs.cc: Likewise.
	* docs/cssc.texi (@copying): Likewise.
	(Top): Likewise.
	(Delta Table): Likewise.
	(PROJECTDIR): Likewise.
	* .x-sc_the_the: Exempt googletest/src/gtest.cc.

	Pacify the sc_makefile_TAB_only_indentation syntax check.
	* tests/Makefile.am: Replaced sequences of 8 spaces with a single
	TAB.

	Remove obsolete replacements for missing library files.
	* strerror.c: Remove obsolete file.
	* strstr.c: Remove obsolete file.
	* configure.ac: Don't refer to strerror or strstr via
	AC_REPLACE_FUNCS.

	Remove space-tab sequences.
	* .x-sc_space_tab: Exempt NEWS, ChangeLog files and