@@ -49,7 +49,7 @@ noinst_HEADERS = cssc.h defaults.h file.h fileiter.h filelock.h \
 	filepos.h my-getopt.h linebuf.h mylist.h mystring.h pfile.h \
 	quit.h rel_list.h release.h run.h sccsdate.h sccsfile.h sccsname.h \
 	seqstate.h sf-chkmr.h sid.h sid_list.h sl-merge.h stack.h sysdep.h \
-	sysnerr.h version.h ioerr.h delta-table.h delta.h \
+	version.h ioerr.h delta-table.h delta.h \
 	delta-iterator.h bodyio.h filediff.h except.h valcodes.h \
 	relvbr.h myset.h cssc-assert.h cleanup.h
 
